--- a/ch3/src/main/resources/application.yaml
+++ b/ch3/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username:
-    password:
+    username: root
+    password: root
     url: jdbc:mysql://47.106.197.48:3306/bbs?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&autoReconnect=true&zeroDateTimeBehavior=CONVERT_TO_NULL
 
   jpa:
